--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obokash Travel</title>
+
+    <!-- styles -->
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/responsive.css">
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
