--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <!-- styles -->
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/responsive.css">
+
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <div class="nav-title">
+                <i class="fa-solid fa-earth-asia primary-text-color"></i>
+                <h3 style="margin: 0;">Obokash <span class="nav-title-span primary-text-color">Travel</span></h3>
+            </div>
+           
+            <div class="navbar">
+                <ul>
+                    <li class="nav-link"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="">Packages</a></li>
+                    <li class="nav-link"><a href="">Testimonial</a></li>
+                    <li class="nav-link"><a href="">Blog</a></li>
+                    <li class="nav-link"><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
