--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +11,64 @@
     <link rel="stylesheet" href="./style/responsive.css">
 
     <!-- font awesome  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
     <header>
+        <!-- nav section -->
         <nav>
             <div class="nav-title">
                 <i class="fa-solid fa-earth-asia primary-text-color"></i>
                 <h3 style="margin: 0;">Obokash <span class="nav-title-span primary-text-color">Travel</span></h3>
             </div>
-           
+
             <div class="navbar">
                 <ul>
-                    <li class="nav-link"><a href="#">Home</a></li>
-                    <li class="nav-link"><a href="">Packages</a></li>
-                    <li class="nav-link"><a href="">Testimonial</a></li>
-                    <li class="nav-link"><a href="">Blog</a></li>
-                    <li class="nav-link"><a href="">Contact</a></li>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="#">Packages</a></li>
+                    <li class="nav-link"><a href="#">Testimonial</a></li>
+                    <li class="nav-link"><a href="#">Blog</a></li>
+                    <li class="nav-link"><a href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
+        <!-- banner section -->
+        <section id="banner">
+            <div class="banner-container">
+                <div class="banner-texts">
+
+                    <h1>Explore Your Travel</h1>
+                    <p>Explore Your Travel with Obokash – where every journey becomes an unforgettable adventure!</p>
+                </div>
+                <div class="banner-box">
+
+                    <input type="text" class="banner-input" placeholder="Where Go">
+
+                    <select name="example" class="banner-input">
+                        <option value="" disabled selected>When</option>
+                        <option value="option1">Morning</option>
+                        <option value="option2">Afternoon</option>
+                        <option value="option3">Night</option>
+                    </select>
+
+                    <select name="example" class="banner-input">
+                        <option value="" disabled selected>Select Type</option>
+                        <option value="option1">Short</option>
+                        <option value="option2">Medium</option>
+                        <option value="option3">Long</option>
+                    </select>
+
+                    <button class="banner-btn"><i class="fa-solid fa-magnifying-glass" style="display: inline-block;"></i> Find Now</button>
+                </div>
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
