Added Popular Tours section

--- a/index.html
+++ b/index.html
@@ -62,12 +62,51 @@
                         <option value="option3">Long</option>
                     </select>
 
-                    <button class="banner-btn"><i class="fa-solid fa-magnifying-glass" style="display: inline-block;"></i> Find Now</button>
+                    <button class="banner-btn"><i class="fa-solid fa-magnifying-glass"
+                            style="display: inline-block;"></i> Find Now</button>
                 </div>
             </div>
         </section>
     </header>
-    <main></main>
+    <!-- Main section start -->
+    <main>
+        <!-- Our Popular Tours section - start -->
+        <section id="popular-tours" class="common-margin">
+            <div class="popular-tour-container">
+                <div class="popular-tours-text-content">
+                    <h1 class="popular-tour-title">Our Popular Tours</h1>
+                    <p class="popular-tour-text-1">
+                        Discover Bangladesh with 'Our Popular Tours' by Obokash Travel. Cruise the Sundarbans, delve
+                        into Dhaka's cultural heritage, and retreat to serene Sylhet. Explore the best of our curated
+                        tours, capturing the essence of this vibrant country.
+                    </p>
+                    <ul class="popular-tour-text-2">
+                        <li><strong>Majestic Sundarbans Adventure:</strong>
+                            Cruise through the world's largest mangrove forest, the Sundarbans, and witness the
+                            enchanting beauty of diverse flora and fauna, including the elusive Bengal tigers.
+                        </li>
+                        <li><strong>Cultural Heritage of Dhaka City:</strong>
+                            Dive into Dhaka's rich history, from the bustling streets of Old Dhaka to the historic Lalbagh Fort, experiencing the vibrant blend of modernity and tradition.
+                        </li>
+                        <li><strong>Serene Sylhet Countryside Retreat:</strong>
+                            Escape to the tranquil landscapes of Sylhet, surrounded by lush tea gardens and picturesque hills. Explore the Ratargul Swamp Forest, ancient shrines, and embrace the serenity of this enchanting region.
+                        </li>
+                    </ul>
+                    <p class="popular-tour-text-3">Experience the best of Bangladesh with Obokash Travel's top-rated tours.</p>
+
+                    <button class="common-btn popular-tour-btn">
+                        Read More
+                    </button>
+                </div>
+                <div class="popular-tours-img-content">
+                    <img class="popular-tour-img" src="./Images/Rectangle 4.png" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- Our Popular Tours section - end -->
+    </main>
+    <!-- Main section end -->
     <footer></footer>
 </body>
 
