Completed Choose Your Destination section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,53 @@
             </div>
         </section>
         <!-- Our Popular Tours section - end -->
+
+        <!-- Choose Your Destination section - start -->
+        <section id="destination" class="common-margin">
+            <h1 class="common-title">Choose Your Destination</h1>
+            <p class="common-description">Explore endless possibilities at Obokash Travel. From exotic landscapes to vibrant cities, let your wanderlust guide you to your next unforgettable journey</p>
+
+            <div class="destination-img-container">
+                <!-- ROW 1 -->
+                <div class="destination-row-1">
+                    <div class="row">
+                        <img class="row-1-img-1" src="./Images/Rectangle 5.png" alt="">
+                        <p class="row-text">Maldives</p>
+                    </div>
+                    <div class="row">
+                        <img class="row-1-img-2" src="./Images/Rectangle 8.png" alt="">
+                        <p class="row-text">Indonesia</p>
+                    </div>
+                </div>
+                <!-- ROW 2 -->
+                <div class="destination-row-2">
+                    <div class="row">
+                        <img class="row-2-img-1" src="./Images/Rectangle 6.png" alt="">
+                        <p class="row-text">Srilanka</p>
+                    </div>
+                    <div class="row">
+                        <img class="row-2-img-2" src="./Images/Rectangle 7.png" alt="">
+                        <p class="row-text">North America</p>
+                    </div>
+                    <div class="row">
+                        <img class="row-2-img-3" src="./Images/Rectangle 9.png" alt="">
+                        <p class="row-text">Kashmir</p>
+                    </div>
+                </div>
+                <!-- ROW 3-->
+                <div class="destination-row-3">
+                    <div class="row">
+                        <img class="row-3-img-1" src="./Images/Rectangle 10.png" alt="">
+                        <p class="row-text">Bangladesh</p>
+                    </div>
+                    <div class="row">
+                        <img class="row-3-img-2" src="./Images/Rectangle 11.png" alt="">
+                        <p class="row-text">Bandarban</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Choose Your Destination section - end -->
     </main>
     <!-- Main section end -->
     <footer></footer>
