Why Choose Us section added

--- a/index.html
+++ b/index.html
@@ -86,13 +86,17 @@
                             enchanting beauty of diverse flora and fauna, including the elusive Bengal tigers.
                         </li>
                         <li><strong>Cultural Heritage of Dhaka City:</strong>
-                            Dive into Dhaka's rich history, from the bustling streets of Old Dhaka to the historic Lalbagh Fort, experiencing the vibrant blend of modernity and tradition.
+                            Dive into Dhaka's rich history, from the bustling streets of Old Dhaka to the historic
+                            Lalbagh Fort, experiencing the vibrant blend of modernity and tradition.
                         </li>
                         <li><strong>Serene Sylhet Countryside Retreat:</strong>
-                            Escape to the tranquil landscapes of Sylhet, surrounded by lush tea gardens and picturesque hills. Explore the Ratargul Swamp Forest, ancient shrines, and embrace the serenity of this enchanting region.
+                            Escape to the tranquil landscapes of Sylhet, surrounded by lush tea gardens and picturesque
+                            hills. Explore the Ratargul Swamp Forest, ancient shrines, and embrace the serenity of this
+                            enchanting region.
                         </li>
                     </ul>
-                    <p class="popular-tour-text-3">Experience the best of Bangladesh with Obokash Travel's top-rated tours.</p>
+                    <p class="popular-tour-text-3">Experience the best of Bangladesh with Obokash Travel's top-rated
+                        tours.</p>
 
                     <button class="common-btn popular-tour-btn">
                         Read More
@@ -109,7 +113,8 @@
         <!-- Choose Your Destination section - start -->
         <section id="destination" class="common-margin">
             <h1 class="common-title">Choose Your Destination</h1>
-            <p class="common-description">Explore endless possibilities at Obokash Travel. From exotic landscapes to vibrant cities, let your wanderlust guide you to your next unforgettable journey</p>
+            <p class="common-description">Explore endless possibilities at Obokash Travel. From exotic landscapes to
+                vibrant cities, let your wanderlust guide you to your next unforgettable journey</p>
 
             <div class="destination-img-container">
                 <!-- ROW 1 -->
@@ -152,6 +157,43 @@
             </div>
         </section>
         <!-- Choose Your Destination section - end -->
+
+        <!-- Why choose us - start -->
+        <section id="why-choose-us common-margin">
+            <h1 class="common-title">Why Choose Us</h1>
+            <p class="common-description">Your passport to excellence. Seamless journeys, personalized itineraries, and
+                a commitment to making your travel dreams a reality. Experience the difference with us</p>
+            <div class="choose-container">
+                <div class="choose-content-1">
+                    <img src="./Images/hotel 1.png" alt="">
+                    <h1 class="choose-title">Handpicked Hotels</h1>
+                    <p class="choose-description">
+                        Experience opulence at Handpicked Hotels—where each stay is a curated masterpiece of luxury and
+                        personalized excellence, inviting you to indulge in refined comfort and unforgettable moments
+                    </p>
+                </div>
+                <div class="choose-content-2">
+                    <img src="./Images/map 1.png" alt="">
+                    <h1 class="choose-title">World Class Service</h1>
+                    <p class="choose-description">
+                        Elevate your experience with our World Class Service—where impeccable hospitality meets your
+                        every need, ensuring a seamless and unforgettable journey
+                    </p>
+                </div>
+                <div class="choose-content-3">
+                    <img src="./Images/price-tag 1.png" alt="">
+                    <h1 class="choose-title">Best Price Guarantee</h1>
+                    <p class="choose-description">
+                        Enjoy peace of mind with our Best Price Guarantee—assuring you the most competitive rates for an
+                        exceptional travel experience. Book confidently, knowing you're getting the best value for your
+                        adventures
+                    </p>
+                </div>
+
+
+            </div>
+        </section>
+        <!-- Why choose us - end -->
     </main>
     <!-- Main section end -->
     <footer></footer>
