Added newsletter section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 a commitment to making your travel dreams a reality. Experience the difference with us</p>
             <div class="choose-container">
                 <div class="choose-content-1">
-                    <img src="./Images/hotel 1.png" alt="">
+                    <img class="choose-img" src="./Images/hotel 1.png" alt="">
                     <h1 class="choose-title">Handpicked Hotels</h1>
                     <p class="choose-description">
                         Experience opulence at Handpicked Hotels—where each stay is a curated masterpiece of luxury and
@@ -173,7 +173,7 @@
                     </p>
                 </div>
                 <div class="choose-content-2">
-                    <img src="./Images/map 1.png" alt="">
+                    <img class="choose-img" src="./Images/map 1.png" alt="">
                     <h1 class="choose-title">World Class Service</h1>
                     <p class="choose-description">
                         Elevate your experience with our World Class Service—where impeccable hospitality meets your
@@ -181,7 +181,7 @@
                     </p>
                 </div>
                 <div class="choose-content-3">
-                    <img src="./Images/price-tag 1.png" alt="">
+                    <img class="choose-img" src="./Images/price-tag 1.png" alt="">
                     <h1 class="choose-title">Best Price Guarantee</h1>
                     <p class="choose-description">
                         Enjoy peace of mind with our Best Price Guarantee—assuring you the most competitive rates for an
@@ -194,6 +194,34 @@
             </div>
         </section>
         <!-- Why choose us - end -->
+
+        <!-- Newsletter section - start -->
+        <section class="Newsletter common-margin">
+            <div class="newsletter-container">
+                <div class="newsletter-content">
+                    <h1 class="choose-title">Newsletter</h1>
+                    <p class="choose-description">Get your daily dose of travel news & tips. Sign up today!</p>
+
+                    <hr>
+
+                    <div class="form-input">
+                        <input type="text" class="newsletter-input" placeholder="Please Enter Your Name">
+                        <input type="text" class="newsletter-input" placeholder="Please Enter Your Email">
+
+                        <button class="form-btn">
+                           Subscribe
+                        </button>
+                    </div>
+                </div>
+                <div class="newsletter-img-content">
+                    <img class="news-img" src="./Images/Rectangle 8 (1).png" alt="">
+                    <div class="discount-text">
+                        <p>Obokash.com</p>
+                    <h1>Save up to 70%</h1></div>
+                </div>
+            </div>
+        </section>
+        <!-- Newsletter section - end -->
     </main>
     <!-- Main section end -->
     <footer></footer>
