--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <input type="text" class="newsletter-input" placeholder="Please Enter Your Email">
 
                         <button class="form-btn">
-                           Subscribe
+                            Subscribe
                         </button>
                     </div>
                 </div>
@@ -217,14 +217,33 @@
                     <img class="news-img" src="./Images/Rectangle 8 (1).png" alt="">
                     <div class="discount-text">
                         <p>Obokash.com</p>
-                    <h1>Save up to 70%</h1></div>
+                        <h1>Save up to 70%</h1>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Newsletter section - end -->
     </main>
     <!-- Main section end -->
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-title nav-title">
+                <i class="fa-solid fa-earth-asia primary-text-color"></i>
+                <h3 style="margin: 0;">Obokash <span class="nav-title-span primary-text-color">Travel</span></h3>
+            </div>
+            <p class="footer-text">Explore endless possibilities at Obokash Travel. From exotic landscapes to
+                vibrant cities, let your wanderlust guide you to your next unforgettable journey
+            </p>
+            <div class="brands">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+            <hr class="footer-hr">
+            <p class="footer-copyright"><small> 2024, All Rights Reserved.</small></p>
+        </div>
+    </footer>
 </body>
 
 </html>
